--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,6 @@ matrix:
            - opencv
            - ccache
           update: true
-      env:
-        - CC=clang++
       install:
         - export PATH="/usr/local/opt/ccache/libexec:$PATH"
       script:
@@ -26,10 +24,8 @@ matrix:
         - sudo apt-get install -y gcc-8 g++-8
         - g++-8 --version
         - sudo apt-get install -y libopencv-dev pkg-config
-      env:
-        - CC=g++-8
       script:
-        - make
+        - make CXX=g++-8
       after_success:
        - export CODECOV_TOKEN="619baaa1-1d7b-474e-9409-8b490f3e148f"
        - gcov *.cpp
